# globant-task

./: .gitignore  Dockerfile  README.md  docker-compose.yml  example.env  pyproject.toml  requirements.txt  run.sh  schema.prisma
.github/workflows/: linting-flake8.yml  pylint.yml
app/: __main__.py  config.py  main.py  prisma_config.py
app/api/: router.py
app/api/routes/: analytics.py  departments.py  employees.py  health_check.py  jobs.py  results.py
app/celery/: db.py  worker.py
app/models/: Models.py  UploadError.py
app/utils/: queries.py  readers.py  validators.py
tests/: departments_test.py  employees_test.py  health_test.py  jobs_test.py  load_testing.py  test_1_health_test.py  test_2_jobs_test.py  test_3_departments_test.py  test_4_employees_test.py
tests/helpers/: get_test_data.py
