[tool.poetry]
name = "globant-task"
version = "0.1.0"
description = "Globant Task"
authors = ["Anwar Knyane"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
pydantic = "^2.4.2"
celery = "^5.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
